--- a/SAKD.csproj
+++ b/SAKD.csproj
@@ -74,11 +74,16 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Command.cs" />
+    <Compile Include="Converters\EnumDisplayNameConverter.cs" />
     <Compile Include="EnumHelper.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Migrations\201905021235043_Initial.cs" />
     <Compile Include="Migrations\201905021235043_Initial.Designer.cs">
       <DependentUpon>201905021235043_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201905151711508_BranchName.cs" />
+    <Compile Include="Migrations\201905151711508_BranchName.Designer.cs">
+      <DependentUpon>201905151711508_BranchName.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ModelContainer.cs" />
@@ -169,6 +174,9 @@
     </Compile>
     <EmbeddedResource Include="Migrations\201905021235043_Initial.resx">
       <DependentUpon>201905021235043_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905151711508_BranchName.resx">
+      <DependentUpon>201905151711508_BranchName.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
