Edit Order details

--- a/SAKD.csproj
+++ b/SAKD.csproj
@@ -98,6 +98,10 @@
     <Compile Include="Migrations\201905171758250_ClientNullables.Designer.cs">
       <DependentUpon>201905171758250_ClientNullables.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905181824053_OrdersChange.cs" />
+    <Compile Include="Migrations\201905181824053_OrdersChange.Designer.cs">
+      <DependentUpon>201905181824053_OrdersChange.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ModelContainer.cs" />
     <Compile Include="Models\AdditionalInfo.cs" />
@@ -125,17 +129,25 @@
     <Compile Include="Models\Service.cs" />
     <Compile Include="Models\SocialStatus.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="ViewModels\AnketaViewModel.cs" />
     <Compile Include="ViewModels\BaseBindableViewModel.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\ClientSearchViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\WorkSpaceViewModel.cs" />
+    <Compile Include="Views\Anketa.xaml.cs">
+      <DependentUpon>Anketa.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ClientSearch.xaml.cs">
       <DependentUpon>ClientSearch.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\WorkSpace.xaml.cs">
       <DependentUpon>WorkSpace.xaml</DependentUpon>
     </Compile>
+    <Page Include="Views\Anketa.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\ClientSearch.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -199,6 +211,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905171758250_ClientNullables.resx">
       <DependentUpon>201905171758250_ClientNullables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905181824053_OrdersChange.resx">
+      <DependentUpon>201905181824053_OrdersChange.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
