--- a/App.config
+++ b/App.config
@@ -18,5 +18,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-   <add name="ModelContainer" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=SAKD.ModelContainer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+   <add name="ModelContainer" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=SAKD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
