--- a/SAKD.csproj
+++ b/SAKD.csproj
@@ -96,6 +96,10 @@
     <Compile Include="Migrations\201906021342501_Fix.Designer.cs">
       <DependentUpon>201906021342501_Fix.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201906021628158_File.cs" />
+    <Compile Include="Migrations\201906021628158_File.Designer.cs">
+      <DependentUpon>201906021628158_File.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ModelContainer.cs" />
     <Compile Include="Models\AdditionalInfo.cs" />
@@ -126,6 +130,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="ViewModels\AddEmploymentViewModel.cs" />
     <Compile Include="ViewModels\AddAddressViewModel.cs" />
+    <Compile Include="ViewModels\AddFileViewModel.cs" />
     <Compile Include="ViewModels\AddServiceViewModel.cs" />
     <Compile Include="ViewModels\AnketaViewModel.cs" />
     <Compile Include="ViewModels\BaseBindableViewModel.cs" />
@@ -138,6 +143,9 @@
     </Compile>
     <Compile Include="Views\AddAddress.xaml.cs">
       <DependentUpon>AddAddress.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AddFile.xaml.cs">
+      <DependentUpon>AddFile.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\AddService.xaml.cs">
       <DependentUpon>AddService.xaml</DependentUpon>
@@ -159,6 +167,10 @@
     <Page Include="Views\AddAddress.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AddFile.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\AddService.xaml">
       <SubType>Designer</SubType>
@@ -225,6 +237,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201906021342501_Fix.resx">
       <DependentUpon>201906021342501_Fix.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906021628158_File.resx">
+      <DependentUpon>201906021628158_File.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
