--- a/SAKD.csproj
+++ b/SAKD.csproj
@@ -100,6 +100,10 @@
     <Compile Include="Migrations\201906021628158_File.Designer.cs">
       <DependentUpon>201906021628158_File.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201906021726153_Offers.cs" />
+    <Compile Include="Migrations\201906021726153_Offers.Designer.cs">
+      <DependentUpon>201906021726153_Offers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ModelContainer.cs" />
     <Compile Include="Models\AdditionalInfo.cs" />
@@ -122,6 +126,7 @@
     <Compile Include="Models\Industry.cs" />
     <Compile Include="Models\Job.cs" />
     <Compile Include="Models\Node.cs" />
+    <Compile Include="Models\Offer.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Comission.cs" />
     <Compile Include="Models\Parents.cs" />
@@ -240,6 +245,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201906021628158_File.resx">
       <DependentUpon>201906021628158_File.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906021726153_Offers.resx">
+      <DependentUpon>201906021726153_Offers.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
