--- a/App.config
+++ b/App.config
@@ -18,5 +18,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-   <add name="ModelContainer" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=SAKD;AttachDbFilename=C:\Users\Nurik\SAKD.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+   <add name="ModelContainer" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=SAKD;AttachDbFilename=C:\Users\User\SAKD.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
